--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
-title: 闫肃的博客
-email: suyan0830@gmail.com
+title: 陈向的博客
+email: rechardchen123@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  闫肃的博客
+  陈向的博客
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: http://yansu.org # the base hostname & protocol for your site
 rss_url: /pages/feed.xml
-author: Su Yan
+author: Xiang Chen
 
 # Sidebar filter
 # Choose 'tag' or 'category' as filter in sidebar.
