--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,11 @@ filter: 'category'
 recent_num: 20
 
 # Social account
-twitter: suyan404
-weibo: suyan0830
-github: suyan
-instagram: suyan404
-linkedin: suyan404
+twitter: rechardchen123
+weibo: 18581379605
+github: rechardchen123
+instagram: Xiang Chen
+linkedin: xiang chen 
 
 # avatar and Favicon
 avatar: http://7u2ho6.com1.z0.glb.clouddn.com/site-avatar.png
