--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ twitter: rechardchen123
 weibo: 18581379605
 github: rechardchen123
 instagram: Xiang Chen
-linkedin: xiang-chen-279b15155 
+linkedin: xiang chen 
 
 # avatar and Favicon
 avatar: http://7u2ho6.com1.z0.glb.clouddn.com/site-avatar.png
