--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ recent_num: 20
 twitter: rechardchen123
 weibo: 18581379605
 github: rechardchen123
-instagram: Xiang Chen
+instagram: rechard_chen
 linkedin: xiang chen 
 
 # avatar and Favicon
