--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ filter: 'category'
 recent_num: 20
 
 # Social account
-twitter: rechardchen123
+twitter: tony_chen123
 weibo: 18581379605
 github: rechardchen123
 instagram: rechard_chen
